*SVN*

* validates_confirmation_of only kicks in when the attribute, rather than its confirmation, is present.  #785 [z@wzph.com]

* to_xml: the :methods option works on arrays of records.  #5845 [Josh Starcher]

* Deprecation: update docs. #5998 [jakob@mentalized.net, Kevin Clark]

* Add some XmlSerialization tests for ActiveRecord [Rick Olson]

* has_many :through conditions are sanitized by the associating class.  #5971 [martin.emde@gmail.com]

* Tighten rescue clauses.  #5985 [james@grayproductions.net]

* Fix spurious newlines and spaces in AR::Base#to_xml output [Jamis Buck]

* has_one supports the :dependent => :delete option which skips the typical callback chain and deletes the associated object directly from the database.  #5927 [Chris Mear, Jonathan Viney]

* Nested subclasses are not prefixed with the parent class' table_name since they should always use the base class' table_name.  #5911 [Jonathan Viney]

* SQLServer: work around bug where some unambiguous date formats are not correctly identified if the session language is set to german.  #5894 [Tom Ward, kruth@bfpi]

* SQLServer: fix eager association test.  #5901 [Tom Ward]

* Clashing type columns due to a sloppy join shouldn't wreck single-table inheritance.  #5838 [Kevin Clark]

* Fixtures: correct escaping of \n and \r.  #5859 [evgeny.zislis@gmail.com]

* Migrations: gracefully handle missing migration files.  #5857 [eli.gordon@gmail.com]

* MySQL: update test schema for MySQL 5 strict mode.  #5861 [Tom Ward]

* to_xml: correct naming of included associations.  #5831 [josh.starcher@gmail.com]

* Pushing a record onto a has_many :through sets the association's foreign key to the associate's primary key and adds it to the correct association.  #5815, #5829 [josh@hasmanythrough.com]
