@@ -30,6 +30,8 @@ module ActiveRecord
         base.lock_optimistically = true
 
         base.alias_method_chain :update, :lock
+        base.alias_method_chain :attributes_from_column_definition, :lock
+        
         class << base
           alias_method :locking_column=, :set_locking_column
         end
@@ -37,6 +39,21 @@ module ActiveRecord
 
       def locking_enabled? #:nodoc:
         lock_optimistically && respond_to?(self.class.locking_column)
+      end
+
+      def attributes_from_column_definition_with_lock
+        result = attributes_from_column_definition_without_lock
+        
+        # If the locking column has no default value set,
+        # start the lock version at zero.  Note we can't use
+        # locking_enabled? at this point as @attributes may
+        # not have been initialized yet
+        
+        if lock_optimistically && result.include?(self.class.locking_column)
+          result[self.class.locking_column] ||= 0
+        end
+        
+        return result
       end
 
       def update_with_lock #:nodoc:
