@@ -49,4 +49,12 @@ ActiveRecord::Schema.define do
     t.column :sink_id,   :integer, :null => false
   end
   add_index :edges, [:source_id, :sink_id], :unique => true, :name => 'unique_edge_index'
+
+  create_table :lock_without_defaults, :force => true do |t|
+    t.column :lock_version, :integer
+  end
+  
+  create_table :lock_with_custom_column_without_defaults, :force => true do |t|
+    t.column :custom_lock_version, :integer
+  end
 end
